Fixed buttons alignment, streamlined event dates form, added ability to search format and session in speakers table

--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -22,12 +22,10 @@
           border-radius: 8px;
 }
 
-.edit-guidelines-btn, .save-guidelines-btn {
-  margin-top: 30px;
-}
-
+.edit-guidelines-btn,
+.save-guidelines-btn,
 .cancel-guidelines-btn {
-  margin-top: 10px;
+  margin: 1em 0.5em 0 0.5em;
 }
 
 .invite-btn {
